przerobki za wskazaniami Chrystiana

--- a/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
+++ b/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
@@ -41,6 +41,7 @@
     <!-- move the logic from routerlink to login() method -->
     <!-- possible performance issues, not sure what happens first -->
     <!-- incorrect player data validation, duplication of code, single responsibility -->
+    <!-- bedzie zmienione przy okazji wprowadzenia Reactive Forms -->
     <a
       routerLink="/gamePage/{{ colorPalette }}"
       routerLinkActive="active"
